# cui_okinawa

./: CONTRIBUTING.rst  Makefile  README.md  README.rst  appveyor.yml  make.ps1  pyproject.toml  setup.cfg  tox.ini
cui_okinawa/.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/cui_okinawa/: __init__.py  cli.py
src/cui_okinawa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cui_okinawa.py
